# blockblas

./: BlockMatrix.C  BlockMatrix.h  BlockMatrix_templateL.cpp  BlockMatrix_templateT.cpp  CMTile.C  CMTile.h  CMakeLists.txt  ConjugateSolver.h  DiagonalTile.C  DiagonalTile.h  EigenSolver.C  Functor.h  JacobiSolver.C  JacobiSolver.h  Log.h  Makefile  MatMult.C  MatMult.h  Matrix.C  Matrix.h  README.md  RMTile.C  RMTile.h  StripedTile.h  Test.C  Tile.h  TileArray.h  TileFactory.h  TileProduct.C  TileProduct.h  Timer.h  Timing.C  Types.h  VMatrix.C  VMatrix.h  VMatrix_templateL.cpp  VMatrix_templateT.cpp  ZeroTile.h  blas.C  feast.C  (+6 more)
ev/: dexample_sparse_rci_c.C  dexample_sparse_rci_c.res  m  makefile  pardiso_example.c  pardiso_example.ref
src/: CMTile.C  CMTile.h  CMakeLists.txt  ConjugateSolver.h  Davidson.C  Davidson.h  DiagonalTile.C  DiagonalTile.h  Diagonalize.C  Diagonalize.h  EigenSolver.C  EigenSolver.h  Functor.h  JacobiSolver.C  JacobiSolver.h  Log.C  Log.h  StripedTile.h  SymmetricTileArray.h  Tile.C  Tile.h  TileArray.h  TileFactory.h  TileProduct.C  TileProduct.h  Types.h  ZeroTile.h
tests/: CMakeLists.txt  PCdense_zfeast_syev.c  feast.C  mat10  spherium.C  tile_test.C  util.C  util.h
